# cmakepractice

./: .gitignore  README.md
t1/: CMakeLists.txt  main.cpp
t2/: CMakeLists.txt
t2/src/: main.cpp
t3/lib/: CMakeLists.txt
t4/src/: main.cpp
