SET(LIBRARY_SRC hello.cpp)
SET(LIBRARY_OUTPUT_PATH libout)
ADD_LIBRARY(hello SHARED ${LIBRARY_SRC})
ADD_LIBRARY(hello_static STATIC ${LIBRARY_SRC})
# ADD_LIBRARY(libname [SHARED|STATIC|MODULE] [EXCLUDE_FROM_ALL] source1.....)
# libname do not need libname.so, just name.
SET_TARGET_PROPERTIES(hello_static PROPERTIES OUTPUT_NAME "hello")
SET_TARGET_PROPERTIES(hello PROPERTIES VERSION 1.2 SOVERSION 1)

